# tic-tac-toe-hs

./: .gitignore  tic-tac-toe-hs.cabal
app/: Game.hs  Main.hs  Render.hs  Transform.hs
