cabal-version:      2.4
name:               tic-tac-toe-hs
version:            0.1.0.0
synopsis:           Simple tic-tac-toe game written in Haskell.

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Anthony Suárez
maintainer:         neolight1010@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable tic-tac-toe-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Game,
                      Render,
                      Transform

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base  ^>=4.14.3.0,
                      gloss ^>=1.13.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
